added a Sink for Clerezza and improved SquirrelTripleHander, ignoring invalid resources